Calendar tooltips: fix the rendered html actually match the size of the bubble. Also make sure overlay works correctly, that is, the bottom of the text cannot bleed under the tooltip bubble's mouthpiece.

--- a/karl/views/static/calendar.css
+++ b/karl/views/static/calendar.css
@@ -929,9 +929,9 @@ select.category_paths {
 .tooltip {
   display: none;
   font-size: 110%;
-  height: 71px;
-  width: 150px;
-  padding: 5px;
+  height: 56px;
+  width: 140px;
+  padding: 5px 5px 20px;
   color: #333;
   z-index: 100;
   line-height: 1.2em;
